--- a/mini_project/mapAPI/templates/mapAPI/map_test.html
+++ b/mini_project/mapAPI/templates/mapAPI/map_test.html
@@ -202,14 +202,17 @@
 
 <body>
     <form onsubmit="searchPlaces(); return false;">
-        <input type="text" value="서울시 동작구" id="keyword" size="15"> 
-        <select name="category" id="category">
-            <option value="cafe_for">애견카페</option>
-            <option value="playground_for">놀이터,훈련소</option>
-            <option value="meal_with">식당,카페</option>
-            <option value="stay_with">펜션,호텔</option>
-          </select>
-        <button type="submit">검색</button> 
+        <input type="text" value="서울시 동작구" id="input_addr" size="15">
+        <select name="input_cat" id="input_cat">
+            <option value="애견카페">애견카페</option>
+            <option value="반려견놀이터">놀이터</option>
+            <option value="반려견훈련소">훈련소</option>
+            <option value="식당">식당</option>
+            <option value="카페">카페</option>
+            <option value="펜션">펜션</option>
+            <option value="호텔">호텔</option>
+        </select>
+        <button type="submit">검색</button>
     </form>
     <div class="map_wrap">
         <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
@@ -254,15 +257,17 @@
         // 키워드 검색을 요청하는 함수입니다
         function searchPlaces() {
 
-            var keyword = document.getElementById('keyword').value;
-
-            if (!keyword.replace(/^\s+|\s+$/g, '')) {
+            var input_addr = document.getElementById('input_addr').value;
+            var input_cat = document.getElementById('input_cat').value;
+            if (!input_addr.replace(/^\s+|\s+$/g, '')) {
                 alert('주소가 입력되어야 합니다.');
                 return false;
             }
-
+            ps.keywordSearch(input_addr, () => { });
+            input_addr = map.getCenter();
             // 장소검색 객체를 통해 키워드로 장소검색을 요청합니다
-            ps.keywordSearch(keyword, placesSearchCB);
+            // ps.keywordSearch(input_cat, placesSearchCB);
+            ps.keywordSearch(input_cat, placesSearchCB, { location: input_addr, radius: 1000 });
         }
 
         // 장소검색이 완료됐을 때 호출되는 콜백함수 입니다
@@ -315,25 +320,11 @@
                 // LatLngBounds 객체에 좌표를 추가합니다
                 bounds.extend(placePosition);
 
-                // 마커와 검색결과 항목에 mouseover 했을때
-                // 해당 장소에 인포윈도우에 장소명을 표시합니다
-                // mouseout 했을 때는 인포윈도우를 닫습니다
+                // 마커를 클릭하면 infowindow를 엽니다
                 (function (marker, title) {
                     kakao.maps.event.addListener(marker, 'click', function () {
                         displayInfowindow(marker, title);
                     });
-
-                    // kakao.maps.event.addListener(marker, 'mouseout', function () {
-                    //     infowindow.close();
-                    // });
-
-                    // itemEl.onmouseover = function () {
-                    //     displayInfowindow(marker, title);
-                    // };
-
-                    // itemEl.onmouseout = function () {
-                    //     infowindow.close();
-                    // };
                 })(marker, places[i].place_name);
 
                 fragment.appendChild(itemEl);
@@ -438,7 +429,6 @@
             var content = '<div style="padding:5px;z-index:1;" id="link_test">' + title + '</div>';
             infowindow.setContent(content);
             infowindow.open(map, marker);
-            infowindow.event.addListener()
         }
 
         // 검색결과 목록의 자식 Element를 제거하는 함수입니다
