--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -13,7 +13,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
     #link_test {
-      font-family: "나눔손글씨 펜";
       font-size: 20px;
       text-align: center;
     }
@@ -203,8 +202,7 @@
       cursor: default;
       color: #777;
     }
-  </style>
-  <style>
+
     body {
       font: 400 15px Lato, sans-serif;
       line-height: 1.8;
@@ -493,7 +491,7 @@
 
   <div class="jumbotron text-center">
     <h5>댕댕이와 함께할 장소는 어디인가요?</h5>
-    <h3>함개닷컴에서 반려견과 함께할 여정을 계획해보세요</h3>
+    <h3>함께하개에서 반려견과 함께할 여정을 계획해보세요</h3>
 
 
 
@@ -502,7 +500,7 @@
         <div class="col-xs-3 col-sm-offset-2">
           <label for="search_location"></label>
           <input type="text" class="form-control input-lg" name="search_location" id="search_location"
-            placeholder="주소 (ex. 서울특별시 강남구)" value="" class="pac-target-input" autocomplete="on">
+            placeholder="주소 (ex. 서울시 강남구)" value="" class="pac-target-input" autocomplete="on">
           <i class="locate-me loading"></i>
         </div>
 
@@ -519,7 +517,6 @@
             </select>
           </div>
         </div>
-
         <div class="search" style="float:left">
           <div class="col-xs-4"></div>
           <label for="search"></label>
@@ -536,7 +533,7 @@
       <h2>마음에 드는 장소를 선택해주세요
         <hr>
       </h2>
-
+ 
     </div>
 
 
@@ -545,11 +542,10 @@
       <div class="container-fluid bg-grey ">
         <div class="map_wrap">
           <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-
           <div id="menu_wrap" class="bg_white">
             <div class="option">
               <div>
-
+  
               </div>
             </div>
             <hr>
@@ -557,8 +553,8 @@
             <div id="pagination"></div>
           </div>
         </div>
-        <button type="button" class="btn btn-default btn-block btn-lg" id="add1">추가 행선지 검색</button>
-        <button type="button" class="btn btn-default btn-block btn-lg bg-orange" id="close1">전체 경로 길찾기</button>
+      <button type="button" class="btn btn-default btn-block btn-lg" id="add1">추가 행선지 검색</button>
+      <button type="button" class="btn btn-default btn-block btn-lg bg-orange" id="close1">전체 경로 길찾기</button>
       </div>
     </div>
   </div>
@@ -600,8 +596,8 @@
 
     // 키워드 검색을 요청하는 함수입니다
     function searchPlaces() {
-      input_addr = document.getElementById('search_location').value;
-      input_cat = document.getElementById('category').value;
+      input_addr = document.getElementById('input_addr').value;
+      input_cat = document.getElementById('input_cat').value;
       if (!input_addr.replace(/^\s+|\s+$/g, '')) {
         alert('주소가 입력되어야 합니다.');
         return false;
