--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -718,11 +718,11 @@
       el.innerHTML = itemStr;
       el.className = 'item';
 
-      test = 
-      $("markerbg marker_'+(index + 1)").onclick(()=>{
-        // click_list.push({title:title,LatLng:marker.getPosition()})
+      // test = 
+      // $("markerbg marker_'+(index + 1)").onclick(()=>{
+      //   // click_list.push({title:title,LatLng:marker.getPosition()})
         
-      })
+      // })
 
       return el;
     }
