--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -500,14 +500,14 @@
         <div class="col-xs-3 col-sm-offset-2">
           <label for="search_location"></label>
           <input type="text" class="form-control input-lg" name="search_location" id="search_location"
-            placeholder="주소 (ex. 서울시 강남구)" value="" class="pac-target-input" autocomplete="on">
+            placeholder="주소 (ex. 서울시 강남구)" value="" class="pac-target-input" autocomplete="on" required>
           <i class="locate-me loading"></i>
         </div>
 
         <div class="dropdown">
           <div class="col-xs-3">
             <label for="category"></label>
-            <select class="form-control input-lg" id="category" placeholder="카테고리">
+            <select class="form-control input-lg" id="category" placeholder="카테고리" required>
               <option>Category</option>
               <option>-----------------------------------------</option>
               <option>카페</option>
