--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -518,10 +518,10 @@
               <select class="form-control input-lg" id="category" value="카페" placeholder="카테고리">
                 <option>Category</option>
                 <option>-----------------------------------------</option>
-                <option>카페</option>
-                <option>음식점</option>
-                <option>병원</option>
-                <option>공원/놀이터</option>
+                <option value="애견카페">카페</option>
+                <option value="식당">음식점</option>
+                <option value="동물병원">병원</option>
+                <option value="반려견놀이터">공원/놀이터</option>
               </select>
             </div>
           </div>
@@ -633,6 +633,9 @@
           }
         }
         
+        // console.log(data);
+        // console.log(pagination);
+
         // 정상적으로 검색이 완료됐으면
         // 검색 목록과 마커를 표출합니다
         displayPlaces(data);
@@ -682,6 +685,8 @@
         // 마커를 클릭하면 infowindow를 엽니다
         (function (marker, title) {
           kakao.maps.event.addListener(marker, 'click', function () {
+            test = marker;
+            console.log(title);
             click_list.push({title:title,LatLng:marker.getPosition()})
           });
         })(marker, places[i].place_name);
