--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -13,7 +13,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <!-- kakao API 사용을 위한 style -->
   <style>
-
     #link_test {
       font-size: 10px;
       text-align: center;
@@ -516,10 +515,10 @@
             <div class="col-xs-3">
               <label for="category"></label>
               <select class="form-control input-lg" id="category" value="카페" placeholder="카테고리">
-                <option>Category</option>
-                <option>-----------------------------------------</option>
+                <option value="애견카페">Category</option>
+                <option value="애견카페">-----------------------------------------</option>
                 <option value="애견카페">카페</option>
-                <option value="식당">음식점</option>
+                <option value="애견동반식당">음식점</option>
                 <option value="동물병원">병원</option>
                 <option value="반려견놀이터">공원/놀이터</option>
               </select>
@@ -600,7 +599,7 @@
     var ps = new kakao.maps.services.Places();
 
     // 검색 결과 목록이나 마커를 클릭했을 때 장소명을 표출할 인포윈도우를 생성합니다
-    var infowindow = new kakao.maps.InfoWindow({ zIndex: 1 });
+    // var infowindow = new kakao.maps.InfoWindow({ zIndex: 1 });
 
     var input_addr = "서울 강남구"; // 초기값
     var input_cat = "애견카페"; // 초기값
@@ -625,14 +624,14 @@
 
       if (status === kakao.maps.services.Status.OK) {
 
-        var re = RegExp("^" + input_addr + ".")
-        for (var i = 0; i < data.length; i++) {
-          if (re.exec(data[i].address_name) == null) {
-            data.splice(i, 1);
-            i--;
-          }
-        }
-        
+        // var re = RegExp("." + input_addr + ".")
+        // for (var i = 0; i < data.length; i++) {
+        //   if (re.exec(data[i].address_name) == null) {
+        //     data.splice(i, 1);
+        //     i--;
+        //   }
+        // }
+
         // console.log(data);
         // console.log(pagination);
 
@@ -685,9 +684,8 @@
         // 마커를 클릭하면 infowindow를 엽니다
         (function (marker, title) {
           kakao.maps.event.addListener(marker, 'click', function () {
-            test = marker;
-            console.log(title);
-            click_list.push({title:title,LatLng:marker.getPosition()})
+            click_list.push({ title: title, LatLng: marker.getPosition() });
+            console.log(click_list, "push success!");
           });
         })(marker, places[i].place_name);
 
@@ -726,7 +724,7 @@
       // test = 
       // $("markerbg marker_'+(index + 1)").onclick(()=>{
       //   // click_list.push({title:title,LatLng:marker.getPosition()})
-        
+
       // })
 
       return el;
