--- a/mini_project/sign/templates/sign/join.html
+++ b/mini_project/sign/templates/sign/join.html
@@ -11,8 +11,13 @@
 
 <div class="container">
   <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#loginModal">로그인</button>
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#joinModal">회원가입</button>
+  {% if request.session.user_id %}
+    <button type="button" class="btn btn-success btn-lg" id="myinfo" data-toggle="modal" data-target="#myinfoModal">내정보</button>
+    <button type="button" class="btn btn-success btn-lg" id="logout">로그아웃</button>
+  {% else %}
+    <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#loginModal">로그인</button>
+    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#joinModal">회원가입</button>
+  {% endif %}
   
   <!-- 로그인 -->
   <div class="modal fade" id="loginModal" role="dialog">
@@ -73,6 +78,47 @@
       </div>
     </div>
   </div>
+  <!-- 내정보 -->
+  <div class="modal fade" id="myinfoModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content col-sm-8 col-sm-offset-2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">회원정보</h4>
+        </div>      
+        <form>  
+            <div class="modal-body">
+                {% csrf_token %}
+                <label for="user_id">아이디</label>
+                <!-- <h1 class="form-control" name="user_id">{{user.user_id}}</h1><br> -->
+                <input type="text" name = "user_id" class="form-control", value="{{user.user_id}}"><br>
+                <label for="user_pw">비밀번호</label>
+                <input type="password" name = "user_pw" class="form-control", value="{{user.user_pw}}"><br>
+                <label for="user_email">이메일</label>
+                <input type="email" name ="user_email" class="form-control", value="{{user.user_email}}"><br>
+                <label for="user_dog">반려견명</label>
+                <input type="text" name="user_dog" class="form-control", value="{{user.user_dog}}"><br>
+            </div>
+            <div class="modal-footer">
+                <input type="submit" value="정보수정" class="btn btn-success" id="user_modi">
+                <button type="button" class="btn btn-warning" id="user_del">회원탈퇴</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+  $('#logout').click(() => {
+    location.href = "/sign/logout/"
+  })
+  $("#user_modi").click(() => {
+    location.href = "/sign/user_modi/"
+  })
+  
+</script>
 </body>
 </html>
