--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -681,13 +681,16 @@
         // LatLngBounds 객체에 좌표를 추가합니다
         bounds.extend(placePosition);
 
-        // 마커를 클릭하면 infowindow를 엽니다
-        (function (marker, title) {
+        ((marker, itemEl, data) => {
           kakao.maps.event.addListener(marker, 'click', function () {
-            click_list.push({ title: title, LatLng: marker.getPosition() });
-            console.log(click_list, "push success!");
+            click_list.push(data);
+            console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
           });
-        })(marker, places[i].place_name);
+          itemEl.addEventListener("click",()=>{
+            click_list.push(data);
+            console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
+          },false);      
+        })(marker, itemEl, places[i]);
 
         fragment.appendChild(itemEl);
       }
@@ -702,7 +705,7 @@
 
     // 검색결과 항목을 Element로 반환하는 함수입니다
     function getListItem(index, places) {
-
+      
       var el = document.createElement('li'),
         itemStr = '<span class="markerbg marker_' + (index + 1) + '"></span>' +
           '<div class="info">' +
@@ -720,12 +723,6 @@
 
       el.innerHTML = itemStr;
       el.className = 'item';
-
-      // test = 
-      // $("markerbg marker_'+(index + 1)").onclick(()=>{
-      //   // click_list.push({title:title,LatLng:marker.getPosition()})
-
-      // })
 
       return el;
     }
