--- a/mini_project/sign/templates/sign/join.html
+++ b/mini_project/sign/templates/sign/join.html
@@ -68,7 +68,6 @@
                     <input type="email" class="form-control" name="user_email"><br>
                     <label for="user_dog">반려견명</label>
                     <input type="text" class="form-control" name="user_dog"><br>
-                
             </div>
             <div class="modal-footer">
                 <input type="submit" class="btn btn-success" value="가입하기">
@@ -86,25 +85,54 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">회원정보</h4>
-        </div>      
-        <form>  
-            <div class="modal-body">
-                {% csrf_token %}
-                <label for="user_id">아이디</label>
-                <input type="text" name = "user_id" class="form-control", value="{{user.user_id}}"><br>
-                <label for="user_pw">비밀번호</label>
-                <input type="password" name = "user_pw" class="form-control", value="{{user.user_pw}}"><br>
-                <label for="user_email">이메일</label>
-                <input type="email" name ="user_email" class="form-control", value="{{user.user_email}}"><br>
-                <label for="user_dog">반려견명</label>
-                <input type="text" name="user_dog" class="form-control", value="{{user.user_dog}}"><br>
-            </div>
-            <div class="modal-footer">
-                <button type="submit" value="정보수정" class="btn btn-success" id="user_modi">정보수정</button>
-                <button type="button" class="btn btn-warning" id="user_del">회원탈퇴</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+        </div>
+        <form action="{% url 'sign:user_drop' %}" method="post">
+          <div class="modal-body">
+            {% csrf_token %}
+            <label for="user_id">아이디</label>
+            <h1 name = "user_id" class="form-control">{{user.user_id}}</h1><br>
+            <label for="user_pw">비밀번호</label>
+            <h1 name = "user_pw" class="form-control">{{user.user_pw}}</h1><br>
+            <label for="user_email">이메일</label>
+            <h1 name = "user_email" class="form-control">{{user.user_email}}</h1><br>
+            <label for="user_dog">반려견명</label>
+            <h1 name = "user_dog" class="form-control">{{user.user_dog}}</h1><br>
+          </div>
+          <div class="modal-footer">  
+              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modiinfo" data-dismiss="modal">정보수정</button>
+              <input type="submit" class="btn btn-warning" value="회원탈퇴">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
         </form>
+      </div>
+    </div>
+  </div>
+  <!-- 정보수정 -->
+  <div class="modal fade" id="modiinfo" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content col-sm-8 col-sm-offset-2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">회원정보</h4>
+        </div>   
+        <form action="{% url 'sign:modi_info' %}" method="post">
+          <div class="modal-body">
+            {% csrf_token %}
+            <label for="user_id">아이디</label>
+            <input type="text" name = "user_id" class="form-control"><br>
+            <label for="user_pw">비밀번호</label>
+            <input type="password" name = "user_pw" class="form-control"><br>
+            <label for="user_email">이메일</label>
+            <input type="email" name = "user_email" class="form-control"><br>
+            <label for="user_dog">반려견명</label>
+            <input type="text" name = "user_dog" class="form-control"><br>
+          </div>
+          <div class="modal-footer">  
+            <input type="submit" class="btn btn-success" value="수정하기">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </form> 
       </div>
     </div>
   </div>
@@ -114,10 +142,6 @@
   $('#logout').click(() => {
     location.href = "/sign/logout/"
   })
-  $("#user_modi").click(() => {
-    location.href = "/sign/user_modi/"
-  })
-  
 </script>
 </body>
 </html>
