--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -472,7 +472,7 @@
   </style>
 
 </head>
-
+{% load static %}
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -483,7 +483,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#myPage"><img src="./logo.jpg" alt="logo"></a>
+        <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" alt="logo"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -560,6 +560,8 @@
   </div>
   
   <div id="click_list"></div>
+
+  <div id="clicks_show" class="container-fluid bg-grey">
 
   <div id="buttons_result" class="container-fluid bg-grey" style="display:none;">
     <button type="button" class="btn btn-default btn-block btn-lg" id="add1">추가 행선지 검색</button>
@@ -682,10 +684,21 @@
           kakao.maps.event.addListener(marker, 'click', function () {
             click_list.push(data);
             console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
-          });
+            console.log(data.place_name);
+            var clk_btns = document.querySelector('#clicks_show');
+            clk_btns.innerHTML += `<button>${data.place_name}</button>`;
+            }
+            
+            // var clk_btns = document.querySelector('#clicks_show')
+            // clk_btns.innerHTML = click_list[].place_name
+          );
           itemEl.addEventListener("click",()=>{
             click_list.push(data);
             console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
+            console.log(data.place_name);
+            // for(i=0;i<click_list.length;i++){
+            //   console.log(click_list[i].place_name)
+            // }
           },false);      
         })(marker, itemEl, places[i]);
 
