--- a/mini_project/mapAPI/templates/mapAPI/main_v2.4.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.4.html
@@ -472,7 +472,7 @@
   </style>
 
 </head>
-
+{% load static %}
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -483,7 +483,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#myPage"><img src="./logo.jpg" alt="logo"></a>
+        <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" alt="logo"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -684,20 +684,21 @@
           kakao.maps.event.addListener(marker, 'click', function () {
             click_list.push(data);
             console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
-            var clk_btns = document.querySelector('#clicks_list')
-            clk_btns.innerHTML += click_list.place_name
+            console.log(data.place_name);
+            var clk_btns = document.querySelector('#clicks_show');
+            clk_btns.innerHTML += `<button>${data.place_name}</button>`;
             }
             
             // var clk_btns = document.querySelector('#clicks_show')
             // clk_btns.innerHTML = click_list[].place_name
-          });
+          );
           itemEl.addEventListener("click",()=>{
             click_list.push(data);
             console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
-            for(i=0;i<click_list.length;i++){
-              var clk_btns = document.querySelector('#click_list')
-              clk_btns.innerHTML += click_list[i].place_name
-            }
+            console.log(data.place_name);
+            // for(i=0;i<click_list.length;i++){
+            //   console.log(click_list[i].place_name)
+            // }
           },false);      
         })(marker, itemEl, places[i]);
 
