--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -483,7 +483,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" alt="logo"></a>
+        <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" width="150" alt="logo"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
@@ -545,7 +545,7 @@
 
   <!-- <div id="map_show" style="display:none;"> -->
   <div class="map_wrap">
-    <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
+    <div id="map" style="width:50%;height:100%;position:relative;overflow:hidden;" margin-left ="5px"></div>
 
     <div id="menu_wrap" class="container-fluid bg-grey">
       <div class="option">
@@ -558,7 +558,8 @@
       <div id="pagination"></div>
     </div>
   </div>
-  
+  <!-- </div>
+   -->
   <div id="click_list"></div>
 
   <div id="clicks_show" class="container-fluid bg-grey">
@@ -685,21 +686,18 @@
             click_list.push(data);
             console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
             console.log(data.place_name);
-            var clk_btns = document.querySelector('#clicks_show');
-            clk_btns.innerHTML += `<button>${data.place_name}</button>`;
+            var clk_btns = document.querySelector('#click_list');
+            clk_btns.innerHTML += `<button>X${data.place_name}</button>`;
             }
-            
-            // var clk_btns = document.querySelector('#clicks_show')
-            // clk_btns.innerHTML = click_list[].place_name
           );
           itemEl.addEventListener("click",()=>{
             click_list.push(data);
             console.log(click_list, "리스트 잘 들어갔는지 확인해주세요");
             console.log(data.place_name);
-            // for(i=0;i<click_list.length;i++){
-            //   console.log(click_list[i].place_name)
-            // }
-          },false);      
+            console.log(data.place_name);
+            var clk_btns = document.querySelector('#click_list');
+            clk_btns.innerHTML += `<button>X ${data.place_name}</button>`;
+            },false);      
         })(marker, itemEl, places[i]);
 
         fragment.appendChild(itemEl);
@@ -858,7 +856,7 @@
       $('#search_result').show();
     })
     // $('#search').click(function () {
-    //   $('#map_wrap').show();
+    //   $('#map_show').show();
     // })
     // $('#search').click(function () {
     //   $('#click_list').show();
