--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -487,10 +487,13 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#login">로그인</a></li>
-          <li><a href="#signup">회원가입</a></li>
-          <li><a href="#mypage">My Page</a></li>
-
+          {% if request.session.user_id %}
+          <li><a data-toggle="modal" data-target="#myinfoModal" id="my_page">My Page</a></li>
+          <li><a id="logout">로그아웃</a></li>
+          {% else %}
+          <li><a data-toggle="modal" data-target="#loginModal">로그인</a></li>
+          <li><a data-toggle="modal" data-target="#joinModal">회원가입</a></li>
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -543,6 +546,127 @@
     </div>
   </div>
 
+  <!-- 인환 -->
+  <!-- 로그인 -->
+  <div class="modal fade" id="loginModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content col-sm-8 col-sm-offset-2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">로그인</h4>
+        </div>
+        
+        <form action="{% url 'sign:login' %}" method="post">  
+            <div class="modal-body">
+                {% csrf_token %}
+                <label for="user_id">아이디</label>      
+                <input type="text" class="form-control " name="user_id"><br>
+                <label for="user_pw">비밀번호</label>
+                <input type="password" class="form-control" name="user_pw"><br>
+            </div>
+            <div class="modal-footer">
+                <input type="submit" class="btn btn-success" value="로그인">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- 회원가입 -->
+  <div class="modal fade" id="joinModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content col-sm-8 col-sm-offset-2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">회원가입</h4>
+        </div>
+        
+        <form action="{% url 'sign:join_post' %}" method="post">  
+            <div class="modal-body">
+                    {% csrf_token %}                  
+                    <label for="user_id">아이디</label>
+                    <input type="text" class="form-control" name="user_id"><br>
+                    <label for="user_pw">비밀번호</label>
+                    <input type="password" class="form-control" name="user_pw"><br>
+                    <label for="user_pw2">비밀번호 재확인</label>
+                    <input type="password" class="form-control" name="user_pw2"><br>
+                    <label for="user_email">이메일</label>
+                    <input type="email" class="form-control" name="user_email"><br>
+                    <label for="user_dog">반려견명</label>
+                    <input type="text" class="form-control" name="user_dog"><br>
+            </div>
+            <div class="modal-footer">
+                <input type="submit" class="btn btn-success" value="가입하기">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- 내정보 -->
+  <div class="modal fade" id="myinfoModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content col-sm-8 col-sm-offset-2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">회원정보</h4>
+        </div>
+        <form action="{% url 'sign:user_drop' %}" method="post">
+          <div class="modal-body">
+            {% csrf_token %}
+            <label for="user_id">아이디</label>
+            <h1 name = "user_id" class="form-control">{{user.user_id}}</h1><br>
+            <label for="user_pw">비밀번호</label>
+            <h1 name = "user_pw" class="form-control">{{user.user_pw}}</h1><br>
+            <label for="user_email">이메일</label>
+            <h1 name = "user_email" class="form-control">{{user.user_email}}</h1><br>
+            <label for="user_dog">반려견명</label>
+            <h1 name = "user_dog" class="form-control">{{user.user_dog}}</h1><br>
+          </div>
+          <div class="modal-footer">  
+              <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modiinfo" id="modi_info" data-dismiss="modal">정보수정</button>
+              <input type="submit" class="btn btn-warning" value="회원탈퇴">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- 정보수정 -->
+  <div class="modal fade" id="modiinfo" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content col-sm-8 col-sm-offset-2">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">회원정보</h4>
+        </div>   
+        <form action="{% url 'sign:modi_info' %}" method="post">
+          <div class="modal-body">
+            {% csrf_token %}
+            <label for="user_id">아이디</label>
+            <input type="text" name = "user_id" class="form-control"><br>
+            <label for="user_pw">비밀번호</label>
+            <input type="password" name = "user_pw" class="form-control"><br>
+            <label for="user_email">이메일</label>
+            <input type="email" name = "user_email" class="form-control"><br>
+            <label for="user_dog">반려견명</label>
+            <input type="text" name = "user_dog" class="form-control"><br>
+          </div>
+          <div class="modal-footer">  
+            <input type="submit" class="btn btn-success" value="수정하기">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </form> 
+      </div>
+    </div>
+  </div>
   <!-- <div id="map_show" style="display:none;"> -->
   <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
@@ -853,6 +977,40 @@
     $('#search').click(function () {
       $('#buttons_result').show();
     })
+
+    $('#logout').click(() => {
+      $.ajax({
+        url : "/sign/logout/",
+        success: function (data) {
+          location = '/map/main/';
+        },  
+      })
+    })
+
+    $('#my_page').click(() => {
+      $.ajax({
+        url : "/sign/modi_info/",
+        success: function (data) {
+          $('h1[name=user_id]').text(data.user_id);
+          $('h1[name=user_pw]').text(data.user_pw);
+          $('h1[name=user_email]').text(data.user_email);
+          $('h1[name=user_dog]').text(data.user_dog);
+        },  
+      })
+    })
+    $('#modi_info').click(() => {
+      $.ajax({
+        url : "/sign/modi_info/",
+        success: function (data) {
+          $('input[name=user_id]').val(data.user_id);
+          $('input[name=user_pw]').val(data.user_pw);
+          $('input[name=user_email]').val(data.user_email);
+          $('input[name=user_dog]').val(data.user_dog);
+        },  
+      })
+    })
+
+
   </script>
 
 </body>
