디자인변경

--- a/mini_project/mapAPI/templates/mapAPI/old/filter.html
+++ b/mini_project/mapAPI/templates/mapAPI/old/filter.html
@@ -88,6 +88,8 @@
     $('#third-destination tbody').append(tag);
 
 //필터 버튼
+click_list
+
     $('#eight').change((e) => {
         if ((this).is(':checked')) {
             $('#here').html(`
