--- a/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
+++ b/mini_project/mapAPI/templates/mapAPI/main_v2.0.html
@@ -475,7 +475,7 @@
 {% load static %}
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top" style="height: 70px;">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -483,9 +483,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" width="150" alt="logo"></a>
+        <a class="navbar-brand" href="#myPage"><img src="{% static 'mapAPI/logo.jpg' %}" width="120" alt="logo"></a>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
+      <div class="collapse navbar-collapse" id="myNavbar" style="margin-top: 10px;">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#login">로그인</a></li>
           <li><a href="#signup">회원가입</a></li>
@@ -506,14 +506,14 @@
           <div class="col-xs-3 col-sm-offset-2">
             <label for="search_location"></label>
             <input type="text" class="form-control input-lg" name="search_location" id="search_location" value="서울 강남구"
-              placeholder="주소 (ex. 서울 강남구)" value="" class="pac-target-input" autocomplete="on">
+              placeholder="주소 (ex. 서울 강남구)" value="" class="pac-target-input" autocomplete="on" style="margin-left: 80px">
             <i class="locate-me loading"></i>
           </div>
 
           <div class="dropdown">
             <div class="col-xs-3">
               <label for="category"></label>
-              <select class="form-control input-lg" id="category" value="카페" placeholder="카테고리">
+              <select class="form-control input-lg" id="category" value="카페" placeholder="카테고리" style="margin-left: 70px">
                 <option value="애견카페">Category</option>
                 <option value="애견카페">-----------------------------------------</option>
                 <option value="애견카페">카페</option>
@@ -527,12 +527,14 @@
           <div class="search" style="float:left">
             <div class="col-xs-4"></div>
             <label for="search"></label>
-            <button type="submit" class="btn btn-danger btn-lg" id="search" size="10"> 검 색 </button>
+            <button type="submit" class="btn btn-danger btn-lg" id="search"  style="margin-left: 60px"> 검 색 </button>
           </div>
         </div>
       </div>
     </form>
   </div>
+
+  <div id="blank" class="container-fluid2 text-center"></div>
 
   <div id="search_result" style="display:none;">
     <!-- Container (About Section) -->
@@ -545,9 +547,9 @@
 
   <!-- <div id="map_show" style="display:none;"> -->
   <div class="map_wrap">
-    <div id="map" style="width:50%;height:100%;position:relative;overflow:hidden;" margin-left ="5px"></div>
+    <div id="map" style="width:70%;height:100%;position:relative;overflow:hidden;margin:0 auto;"></div>
 
-    <div id="menu_wrap" class="container-fluid bg-grey">
+    <div id="menu_wrap" style="margin-left:250px;">
       <div class="option">
         <div>
 
@@ -560,7 +562,13 @@
   </div>
   <!-- </div>
    -->
-  <div id="click_list"></div>
+   <div class="row slideanim">
+    <div class="col-sm-4">
+      <div id="click_list"></div>
+    </div>
+  </div>
+
+  
 
   <div id="clicks_show" class="container-fluid bg-grey">
 
